# rx-dex

./: .dockerignore  .env.dev  .gitignore  COMPLETE-DEX-README.md  COMPLETE-DEX-SUMMARY.md  CONTRIBUTING.md  Cargo.docker.toml  Cargo.toml  DAILY-OPERATIONS-GUIDE.md  DOCKER-BUILD-STATUS.md  DOCKER-BUILD-SUMMARY.md  DOCKER-FIXES-SUMMARY.md  DOCKER-README.md  DOMAIN-CONFIGURATION-GUIDE.md  PRODUCTION-DEPLOYMENT-GUIDE.md  PRODUCTION-HOSTING-GUIDE.md  README.md  SECURITY.md  TESTING-README.md  WSL-FIXES-SUMMARY.md  WSL-README.md  XEON-SIMULATION-QUICKSTART.md  build-working-services.ps1  build-working-services.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.wsl.yml  docker-compose.yml  nginx.conf  test-order.json  test-order.ps1  test_api.py  test_complete_match.py  test_match.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docs.yml  release.yml
clients/web/: Caddyfile  Cargo.toml  Dockerfile  index.html
clients/web/assets/: styles.css
clients/web/src/: lib.rs  main.rs
contracts/cw-amm-cpmm/: Cargo.toml
contracts/cw-amm-cpmm/src/: lib.rs
contracts/cw-amm-cpmm/tests/: instantiate.rs
contracts/cw-factory/: Cargo.toml
contracts/cw-fee-treasury/: Cargo.toml
contracts/cw-gov/: Cargo.toml
contracts/cw-lp-token/: Cargo.toml
contracts/cw-router/: Cargo.toml
contracts/cw-router/src/: lib.rs
contracts/cw-stake/: Cargo.toml
docs/: README.md  api.md  branch-protection-rules.md  index.html
k8s/: api-gateway.yaml  postgres.yaml  quoter.yaml  redis.yaml
libs/dex-math/: Cargo.toml
libs/dex-math/src/: lib.rs
libs/dex-math/tests/: cpmm_prop.rs
libs/dex-messaging/: Cargo.toml
libs/dex-messaging/src/: events.rs  lib.rs  publisher.rs  subscriber.rs
libs/dex-oracle/: Cargo.toml
libs/dex-oracle/src/: lib.rs
libs/dex-primitives/: Cargo.toml
libs/dex-sdk-rs/: Cargo.toml
scripts/: check-docker-status.ps1  concurrency-test.ps1  copy-to-wsl.sh  daily-dev-wsl.sh  daily-dev.ps1  daily-health-check-wsl.sh  daily-health-check.ps1  daily-prod.ps1  daily-prod.sh  dev.ps1  install-wrk.ps1  load-test-suite.ps1  load-test.js  logs-rxdex.ps1  monitor-prod.ps1  monitor-prod.sh  monitor-resources.ps1  run-rxdex-wsl-dev.sh  setup-prod.ps1  setup-prod.sh  setup-rxdex-wsl.sh  setup-wsl-environment.sh  setup-xeon-wsl.ps1  setup-xeon-wsl.sh  start-dex.bat  start-dex.ps1  start-dex.sh  start-rxdex.ps1  stop-daily-dev-wsl.sh  stop-daily-dev.ps1  stop-rxdex-wsl-dev.sh  stop-rxdex.ps1  test-dashboard.ps1  test-dex.bat  test-dex.sh  test-wsl-setup.sh  verify-services.ps1
services/admin-service/: Cargo.toml  Dockerfile  README.md
services/admin-service/src/: main.rs
services/api-gateway/: Cargo.toml  Dockerfile
services/api-gateway/src/: main.rs
services/indexer/: Cargo.toml  Dockerfile
services/indexer/src/: main.rs
services/matching-engine/: Cargo.toml  Dockerfile
services/matching-engine/src/: main.rs
services/notification-service/: Cargo.toml  Dockerfile
services/notification-service/src/: main.rs
services/order-service/: Cargo.toml  Dockerfile
services/order-service/src/: main.rs
services/quoter/: Cargo.toml  Dockerfile
services/quoter/src/: main.rs
services/trading-service/: Cargo.toml  Dockerfile
services/trading-service/src/: main.rs
services/user-service/: Cargo.toml  Dockerfile
services/user-service/src/: main.rs
services/wallet-service/: Cargo.toml  Dockerfile
services/wallet-service/src/: main.rs
