[package]
name = "rx-dex-web"
version = "0.1.0"
edition = "2021"

[lib]
# Need rlib so `src/main.rs` can `use rx_dex_web::App;`
# Keep cdylib so the WASM target works with Trunk/wasm-bindgen.
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
gloo = { version = "0.11", features = ["net"] }
web-sys = "0.3"

[profile.dev]
opt-level       = 0
incremental     = true
codegen-units   = 256
debug           = 1           # Keep minimal debug info
lto             = false
panic           = "abort"
overflow-checks = false
strip           = "debuginfo"

# Optimize dependencies but not your code (this is the key addition)
[profile.dev.package."*"]
opt-level = 3
debug = false

[profile.dev.build-override]
opt-level = 3

# ---------------------------------------------------------------------
# Fast *rebuilds* while still shipping optimised code
# ---------------------------------------------------------------------
[profile.release]
opt-level       = 3
incremental     = true        # You have this - good for faster rebuilds
codegen-units   = 16
lto             = "thin"
strip           = "symbols"

[profile.release.package."*"]
opt-level     = 1
codegen-units = 256

# ---------------------------------------------------------------------
# Optional: Fast release for development testing
# ---------------------------------------------------------------------
[profile.release-dev]
inherits = "release"
opt-level = 2
debug = true
lto = false
codegen-units = 32