[package]
name = "cw-amm-cpmm"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"

[lib]
# cdylib is required to produce a wasm for deployment; rlib lets you unit-test natively
crate-type = ["cdylib", "rlib"]

[dependencies]
# CosmWasm core
cosmwasm-std = "2"
cosmwasm-schema = "2"
cw2 = "2"
cw-storage-plus = "2"
cw20 = "2"

# serde & errors
serde = { version = "1", features = ["derive"] }
schemars = "0.8"
thiserror = "1"

# math + helpers from your local libs
dex-math = { path = "../../libs/dex-math" }
dex-primitives = { path = "../../libs/dex-primitives" }

# used inside execute() for Decimal conversions
rust_decimal = { version = "1", features = ["serde"] }

ed25519-zebra = { version = "4.1", features = ["alloc"] }

[dev-dependencies]
cw-multi-test = "2"
cosmwasm-std = "2"