[package]
name = "cw-router"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = "2"
cosmwasm-schema = "2"
cw2 = "2"
cw-storage-plus = "2"
serde = { version = "1", features = ["derive"] }
schemars = "0.8"
thiserror = "1"

[dev-dependencies]
cw-multi-test = "2"