[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread","macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ✅ needed for rate limit layer (your error shows the feature was off)
tower = { version = "0.5", features = ["limit","util"] }

# ✅ CORS and request/response tracing
tower-http = { version = "0.5", features = ["cors","trace"] }

# ✅ HTTP client for proxying to quoter (use rustls to avoid native-tls hassles)
reqwest = { version = "0.12", default-features = false, features = ["json","rustls-tls"] }