[package]
name = "quoter"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread","macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dex-math = { path = "../../libs/dex-math" }
rust_decimal = { version = "1", features = ["serde"] }
